<resources>
    <string name="app_name">dataBinding</string>
    <string name="action_settings">Settings</string>

    <string name="button_switch">Commit</string>
    <string name="label_user_name">userName</string>
    <string name="label_password">password</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>
    <string name="gender">Gender:%s</string>
</resources>
