<?xml version="1.0" encoding="utf-8"?>
<layout
    android:id="@+id/content_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="com.example.lucian.databinding.model.User"/>
        <import type="com.example.lucian.databinding.presenter.MainPresenter"/>
        <variable
            name="user"
            type="User"/>
        <variable
            name="presenter"
            type="MainPresenter"/>
    </data>
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.lucian.databinding.MainActivityFragment"
        tools:showIn="@layout/activity_main">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@{user.userName}"
            android:hint="@string/label_user_name"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:inputType="textVisiblePassword"
            android:layout_below="@id/user_name"
            android:text="@{user.passWord}"
            android:hint="@string/label_password"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:text="@{@string/gender(user.gender)}"/>

        <Button
            android:id="@+id/button"
            android:layout_below="@id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/button_switch"
            android:onClick="@{presenter.onCommitClick}"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onCheckedChanged="@{(radioGroup,index) -> presenter.onCheckedChanged(radioGroup,index,user)}"
            android:layout_below="@+id/button">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_male"/>
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_female"/>
        </RadioGroup>

    </RelativeLayout>
</layout>

